--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,3 +1,29 @@
+/* Add this to your existing CSS file */
+
+.top_head {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1001; /* Ensure it's above other elements */
+}
+
+.nav_header {
+  position: fixed;
+  top: 50px; /* Adjust based on the height of .top_head */
+  width: 100%;
+  z-index: 1000;
+  transition: top 0.3s ease-in-out;
+}
+
+.nav_header.hidden {
+  top: -50px; /* Adjust this value based on the header height */
+}
+
+.nav_header.sticky {
+  top: 50px; /* Same as the height of .top_head */
+}
+
+
 header {
   .top_head {
     padding: 0.6rem;
