--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -213,30 +213,6 @@ p {
   text-align: center;
 }
 
-/* Add this to your existing CSS file */
-.top_head {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1001; /* Ensure it's above other elements */
-}
-
-.nav_header {
-  position: fixed;
-  top: 50px; /* Adjust based on the height of .top_head */
-  width: 100%;
-  z-index: 1000;
-  transition: top 0.3s ease-in-out;
-}
-
-.nav_header.hidden {
-  top: -50px; /* Adjust this value based on the header height */
-}
-
-.nav_header.sticky {
-  top: 50px; /* Same as the height of .top_head */
-}
-
 header .top_head {
   padding: 0.6rem;
 }
@@ -275,42 +251,59 @@ header .top_head .top_col_ct .col_right {
        column-gap: 0.5rem;
   justify-content: flex-end;
 }
-header .nav_header {
+
+.nav-up {
+  position: sticky;
+  top: -100px;
+  z-index: 99999;
+  width: 100%;
+}
+
+.nav-down {
+  top: 0px;
+  position: sticky;
+  top: 0px;
+  z-index: 99999;
+  width: 100%;
+}
+
+.nav_header {
   background-color: #008060;
   color: #fff;
+  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
-header .nav_header .header_main {
+.nav_header .header_main {
   display: flex;
   align-items: center;
   padding: 0.8rem 0;
 }
-header .nav_header .header_main .header_col_left {
+.nav_header .header_main .header_col_left {
   justify-content: flex-start;
 }
-header .nav_header .header_main .header_col_right {
+.nav_header .header_main .header_col_right {
   justify-content: flex-end;
   gap: 1rem;
 }
-header .nav_header .header_main .header_col {
+.nav_header .header_main .header_col {
   flex: 1 0 auto;
   display: flex;
   align-items: center;
 }
-header .nav_header .header_main .header_col .balpatrika_btn button {
+.nav_header .header_main .header_col .balpatrika_btn button {
   font-family: "apra" !important;
   display: flex;
   align-items: center;
   gap: 8px;
 }
 @media (max-width: 767px) {
-  header .nav_header .header_main .header_col .balpatrika_btn button {
+  .nav_header .header_main .header_col .balpatrika_btn button {
     padding: 0.4rem 1rem;
   }
 }
-header .nav_header .header_main .header_col .balpatrika_btn button img {
+.nav_header .header_main .header_col .balpatrika_btn button img {
   width: 1.37rem;
 }
-header .nav_header .header_main .header_col .balpatrika_btn button span {
+.nav_header .header_main .header_col .balpatrika_btn button span {
   position: relative;
   top: 3px;
 }
